test: fixes tests